--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       </li>
     </ol>
     <h2 class="display-2">
-      <a href="https://www.ohchr.org/EN/UDHR/Documents/UDHR_Translations/eng.pdf">
+      <a class="number" href="https://www.ohchr.org/EN/UDHR/Documents/UDHR_Translations/eng.pdf">
       Articles 17 to 30</a>
     </h2>
 </body>
